重构项目代码

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="voice_play_too_short">录制时间过短</string>
     <string name="voice_up_slide_cancel">上滑取消</string>
     <string name="voice_release_cancel">松开取消</string>
+
+    <string name="hello">你好~</string>
 </resources>
